# zonechat-docker

./: README.md  clean.sh  start.sh
src/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
